--- a/config.yaml
+++ b/config.yaml
@@ -10,9 +10,10 @@ envs:
   filter_reads:         "envs/filter_reads.yaml"
   rg:                   "envs/rg.yaml"
   generate_krona_input: "envs/generate_krona_input.yaml"
-  krona:       "docker://quay.io/biocontainers/krona:2.7--pl526_2"
+  krona:                "docker://quay.io/biocontainers/krona:2.7--pl526_2"
 scripts:
   filter_reads:         "scripts/filter_reads.py"
   generate_krona_input: "scripts/generate_krona_input.py"
 captions:
   pycoqc: "report/pycoqc.rst"
+  krona:  "report/krona.rst"
