add rule to run mykrobe [#6]

--- a/config.yaml
+++ b/config.yaml
@@ -2,9 +2,10 @@ fast5_dir:    "fast5/"
 model_config: "dna_r9.4.1_450bps_hac_prom.cfg"  # the basecalling model config
 decontam_db:  "/hps/nobackup/research/zi/projects/tech_wars/data/QC/decontam_db/"
 containers:
-  guppy:  "library://mbhall88/default/guppy-gpu:3.4.5"
-  conda:  "docker://continuumio/miniconda3:4.7.12"
-  pycoqc: "docker://quay.io/biocontainers/pycoqc:2.5.0.23--py_0"
+  guppy:   "library://mbhall88/default/guppy-gpu:3.4.5"
+  conda:   "docker://continuumio/miniconda3:4.7.12"
+  pycoqc:  "docker://quay.io/biocontainers/pycoqc:2.5.0.23--py_0"
+  mykrobe: "docker://quay.io/biocontainers/mykrobe:0.8.2--py36h1c69254_1"
 envs:
   aln_tools:            "envs/aln_tools.yaml"
   filter_reads:         "envs/filter_reads.yaml"
@@ -15,5 +16,6 @@ scripts:
   filter_reads:         "scripts/filter_reads.py"
   generate_krona_input: "scripts/generate_krona_input.py"
 captions:
-  pycoqc: "report/pycoqc.rst"
-  krona:  "report/krona.rst"
+  pycoqc:  "report/pycoqc.rst"
+  krona:   "report/krona.rst"
+  mykrobe: "report/mykrobe.rst"
