--- a/config.yaml
+++ b/config.yaml
@@ -19,6 +19,7 @@ envs:
   assign_lineages:      "envs/assign_lineages.yaml"
   consensus:            "envs/consensus.yaml"
   plot_distance_matrix: "envs/plot_distance_matrix.yaml"
+  dotplot:              "envs/dotplot.yaml"
 scripts:
   filter_reads:         "scripts/filter_reads.py"
   generate_krona_input: "scripts/generate_krona_input.py"
@@ -26,12 +27,14 @@ scripts:
   assign_lineages:      "scripts/assign_lineages.py"
   consensus:            "scripts/consensus.py"
   plot_distance_matrix: "scripts/plot_distance_matrix.py"
+  dotplot:              "scripts/distance_dot_plot.py"
 captions:
   pycoqc:          "report/pycoqc.rst"
   krona:           "report/krona.rst"
   mykrobe:         "report/mykrobe.rst"
   lineage:         "report/lineage.rst"
   distance_matrix: "report/distance_matrix.rst"
+  dotplot:         "report/dotplot.rst"
 genome_size:          4411532
 lineage_panel:        "resources/snps_for_typing.csv"
 default_lineage:      "unknown"  # the name given to samples with no variants in the panel of lineage-defining variants
@@ -52,7 +55,7 @@ filters:
   min_rpb:         0.05
   max_sgb:         -0.5
   min_vdb:         0.002
-other_consensus_dir:  "/hps/nobackup/research/zi/projects/tech_wars/analysis/baseline_variants/consensus/bcftools/madagascar"
+other_consensus_dir:  "/hps/nobackup/research/zi/projects/tech_wars/analysis/baseline_variants/consensus/"
 other_consensuses:
   - "mada_116"
   - "mada_134"
